--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,6 @@ permissions:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE: ${{ env.REGISTRY }}/${{ github.repository_owner }}/miapp
 
 jobs:
   compilar_y_publicar:
@@ -21,9 +20,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Establecer IMAGE_TAG
-        id: variables
-        run: echo "IMAGE_TAG=${GITHUB_SHA::8}" >> $GITHUB_ENV
+      - name: Establecer variables
+        run: |
+          echo "IMAGE=${{ env.REGISTRY }}/${{ github.repository_owner }}/miapp" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${GITHUB_SHA::8}" >> $GITHUB_ENV
 
       - name: Construir y enviar imagen (Dockerfile de varias etapas)
         uses: docker/build-push-action@v4
